Update add config enable create/delete topic

--- a/kafka/server.properties
+++ b/kafka/server.properties
@@ -114,4 +114,6 @@ zookeeper.connect=localhost.polaris:2181
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=6000
 
+auto.create.topics.enable=true
 
+delete.topic.enable=true
